// HealthCheck service
// based on
// - https://github.com/grpc/grpc-proto/blob/master/grpc/health/v1/health.proto
// - https://github.com/grpc/grpc/blob/master/doc/health-checking.md

syntax = "proto3";

package nym.health;

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  ServingStatus status = 1;
}

service Health {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}
